--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
     <title>Ariana Shackelford</title>
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="navigation">
             <li><a href="#">Home</a> </li>
             <li><a href="#">About</a> </li>
             <li><a href="#">Projects</a> </li>
