--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
         </ul>
     </nav>
     <div class='header'>
-        <h1>Ariana Shackelford</h1>
-        <h4>Full Stack Developer</h4>
+        <div class="name_and_title">
+            <h1>Ariana Shackelford</h1>
+            <h4>Full Stack Developer</h4>
+        </div>
+        <img class="photo" src="/received_253107179721671.jpeg" alt="personal_photo">
     </div>
     <div class="about-me">
         <h2>About me</h2>
