--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         </ul>
     </nav>
     <div class='header'>
+        <!-- <img class="background_img" src="/evie-s-eRMA9ypZprU-unsplash.jpg" alt="background_img"> -->
         <div class="name_and_title">
-            <h1>Ariana Shackelford</h1>
-            <h4>Full Stack Developer</h4>
+            <h1>Hi, I'm Ariana</h1>
+            <h2>and I'm a Full Stack Developer</h2>
         </div>
         <img class="photo" src="/received_253107179721671.jpeg" alt="personal_photo">
     </div>
