Contact info added

--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
     </div>
     <div class="projects">
         <h2>My Work</h2>
+        <ul class="work">
+            <li class="project">This website! Check out the code on <a href="#">Github</a></li>
+        </ul>
     </div>
     <div class="contact">
         <h2>Contact Me</h2>
+        <p>ariana.shackelford@gmail.com</p>
+        <a href="#">Linkedin</a>
+        <a href="#">Github</a>
+        <a href="#">Twitter</a>
     </div>
 </body>
 </html>
