--- a/index.html
+++ b/index.html
@@ -3,46 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" type="text/css" href="index.css" media="screen"/> -->
     <title>Ariana Shackelford</title>
 </head>
 <body>
-    <nav>
-        <ul class="navigation">
-            <li><a href="#">Home</a> </li>
-            <li><a href="#">About</a> </li>
-            <li><a href="#">Projects</a> </li>
-            <li><a href="#">Contact</a> </li>
-            <li><a href="#">Blog</a> </li>
-        </ul>
-    </nav>
-    <div class='header'>
-        <!-- <img class="background_img" src="/evie-s-eRMA9ypZprU-unsplash.jpg" alt="background_img"> -->
-        <div class="name_and_title">
-            <h1>Hi, I'm Ariana</h1>
-            <h2>and I'm a Full Stack Developer</h2>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+            <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+        <!-- <img class="bg-image" src="/evie-s-eRMA9ypZprU-unsplash.jpg" alt="background_img"> -->
+    <div class="container overflow-hidden">
+       
+        <br>
+        <div class='row'>
+            <div class="col-sm-5 offset-1 d-flex">
+                <h1 class="display-1 text-center text-wrap align-self-center">Hi, I'm Ariana
+                <small class="text-muted">and I'm a Full Stack Developer</small>
+                </h1>
+            </div>
+            <div class="col-5 offset-1">
+                <img src="/profile.jpeg" class="img-fluid rounded-circle float-end shadow mb-5 bg-body rounded" alt="profile">
+            </div>
         </div>
-        <img class="photo" src="/received_253107179721671.jpeg" alt="personal_photo">
+        <div class="about-me">
+            <h2>About me</h2>
+            <p>Hi! My name is Ariana and I am a Full Stack Developer. My professional interest lean towards Front End and Mobile Development, though I have a life long curiosity streak that keeps me interested in learning how to do at least a little bit of everything. This extends to my personal interests as well, it would take too long to list all my hobbies because they are constantly changing and the list is ever growing. My husband and I recently bought a 121 year old house so when I am not working I am fixing it up and gardening. I have a plethora of plants and could talk for hours about them, we are also going to be welcoming home three little kittens in the next couple of weeks and I am very excited to have some furry companions.</p>
+        </div>
+        <div class="projects">
+            <h2>My Work</h2>
+            <ul class="work">
+                <li class="project">This website! Check out the code on <a href="#">Github</a></li>
+            </ul>
+        </div>
+        <div class="contact">
+            <h2>Contact Me</h2>
+            <p>ariana.shackelford@gmail.com</p>
+            <a href="#">Linkedin</a>
+            <a href="#">Github</a>
+            <a href="#">Twitter</a>
+        </div>
     </div>
-    <div class="about-me">
-        <h2>About me</h2>
-        <p>Hi! My name is Ariana and I am a Full Stack Developer. My professional interest lean towards Front End and Mobile Development, though I have a life long curiosity streak that keeps me interested in learning how to do at least a little bit of everything. This extends to my personal interests as well, it would take too long to list all my hobbies because they are constantly changing and the list is ever growing. My husband and I recently bought a 121 year old house so when I am not working I am fixing it up and gardening. I have a plethora of plants and could talk for hours about them, we are also going to be welcoming home three little kittens in the next couple of weeks and I am very excited to have some furry companions.</p>
-    </div>
-    <div class="projects">
-        <h2>My Work</h2>
-        <ul class="work">
-            <li class="project">This website! Check out the code on <a href="#">Github</a></li>
-        </ul>
-    </div>
-    <div class="contact">
-        <h2>Contact Me</h2>
-        <p>ariana.shackelford@gmail.com</p>
-        <a href="#">Linkedin</a>
-        <a href="#">Github</a>
-        <a href="#">Twitter</a>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
 </html>
